--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   },
   "devDependencies": {
     "gulp": "^3.8.8",
+    "gulp-gh-pages": "^0.4.0",
+    "gulp-highlight": "0.0.3",
+    "gulp-load-plugins": "^0.8.1",
     "liferay-sdk": "git://github.com/liferay-apps/tasks.git",
-    "require-dir": "^0.1.0"
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.2"
   }
 }
