--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gulp": "^3.8.8",
     "gulp-gh-pages": "^0.4.0",
     "gulp-highlight": "0.0.3",
+    "gulp-iconfont": "^1.0.0",
+    "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
     "liferay-sdk": "git://github.com/liferay-apps/tasks.git",
     "require-dir": "^0.1.0",
