--- a/package.json
+++ b/package.json
@@ -4,14 +4,35 @@
     "test": "gulp test"
   },
   "devDependencies": {
+    "alloyui-tasks": "git://github.com/alloyui/tasks",
+    "closure-templates": "^20141017.0.0",
     "gulp": "^3.8.8",
     "gulp-gh-pages": "^0.4.0",
     "gulp-highlight": "0.0.3",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
+    "isparta": "git://github.com/douglasduteil/isparta",
+    "karma": "^0.12.31",
+    "karma-babel-preprocessor": "^4.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "git://github.com/douglasduteil/karma-coverage#next",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jspm": "^1.1.4",
+    "karma-mocha": "^0.1.10",
+    "karma-safari-launcher": "^0.1.1",
     "liferay-sdk": "git://github.com/liferay-apps/tasks.git",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2"
+  },
+  "jspm": {
+    "directories": {
+      "lib": "src"
+    },
+    "configFile": "jspm.js",
+    "dependencies": {
+      "aui": "github:alloyui/core@master"
+    }
   }
 }
