--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "alloyui-tasks": "git://github.com/alloyui/tasks",
     "closure-templates": "^20141017.0.0",
     "gulp": "^3.8.8",
+    "gulp-concat": "^2.5.2",
     "gulp-gh-pages": "^0.4.0",
     "gulp-highlight": "0.0.3",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-uglify": "^1.1.0",
     "isparta": "git://github.com/douglasduteil/isparta",
     "karma": "^0.12.31",
     "karma-babel-preprocessor": "^4.0.0",
