--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-gh-pages": "^0.4.0",
     "gulp-highlight": "0.0.3",
+    "gulp-html-prettify": "0.0.1",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
