--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "alloyui-tasks": "git://github.com/alloyui/tasks",
+    "metal": "git://github.com/liferay/metal",
     "closure-templates": "^20141017.0.0",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.5.2",
