Updates scripts to use generator-metal

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "name": "ui-kit",
   "version": "0.0.0",
   "dependencies": {
+    "metaljs": "liferay/metal",
+    "metal-position": "eduardolundgren/metal-position",
     "skeleton": "~2.0.4"
   }
 }
