--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "scripts": {
     "test": "gulp test"
   },
+  "dependencies": {
+    "metaljs": "liferay/metal"
+  },
   "devDependencies": {
-    "metal": "git://github.com/liferay/metal",
+    "babel": "^4.7.3",
+    "browserify": "^9.0.3",
+    "browserify-istanbul": "^0.2.0",
+    "chai": "^2.2.0",
     "closure-templates": "^20141017.0.0",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.5.2",
@@ -14,28 +20,25 @@
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.1.0",
-    "isparta": "git://github.com/douglasduteil/isparta",
+    "isparta": "^2.2.0",
     "karma": "^0.12.31",
     "karma-babel-preprocessor": "^4.0.0",
+    "karma-browserify": "^4.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "git://github.com/douglasduteil/karma-coverage#next",
+    "karma-coverage": "eduardolundgren/karma-coverage#next",
     "karma-firefox-launcher": "^0.1.4",
-    "karma-jspm": "^1.1.4",
     "karma-mocha": "^0.1.10",
     "karma-safari-launcher": "^0.1.1",
+    "karma-sauce-launcher": "^0.2.10",
     "liferay-sdk": "git://github.com/liferay-apps/tasks.git",
+    "mocha": "^2.2.1",
     "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.2"
-  },
-  "jspm": {
-    "directories": {
-      "lib": "src"
-    },
-    "configFile": "jspm.js",
-    "dependencies": {
-      "aui": "github:alloyui/core@master"
-    }
+    "run-sequence": "^1.0.2",
+    "browserify-imports-renamer": "^0.1.1",
+    "closure-templates": "^20141017.0.1",
+    "gulp": "^3.8.11"
   }
 }
