--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-css": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.1.0",
     "isparta": "^2.2.0",
