--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "name": "ui-kit",
   "version": "0.0.0",
   "dependencies": {
+    "soyutils": "2014.04.22",
     "metaljs": "liferay/metal.js#master",
     "metal-position": "eduardolundgren/metal-position",
     "metal-promise": "eduardolundgren/metal-promise",
