--- a/package.json
+++ b/package.json
@@ -3,43 +3,34 @@
   "scripts": {
     "test": "gulp test"
   },
-  "dependencies": {
-    "metaljs": "liferay/metal.js#master"
-  },
   "devDependencies": {
-    "babel": "^5.2.17",
-    "browserify": "^10.1.3",
+    "babel": "^5.4.2",
+    "browserify": "^10.2.0",
     "browserify-imports-renamer": "^0.1.2",
     "browserify-istanbul": "^0.2.1",
     "chai": "^2.3.0",
-    "closure-templates": "^20141017.0.1",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-gh-pages": "^0.5.1",
-    "gulp-highlight": "1.0.0",
-    "gulp-html-prettify": "0.0.1",
-    "gulp-iconfont": "^1.0.0",
+    "closure-templates": "20141017.0.1",
+    "del": "1.1.1",
+    "gulp": "3.8.11",
+    "gulp-babel-globals": "^0.1.1",
+    "gulp-compass": "^2.0.4",
+    "gulp-iconfont": "^1.0.1",
     "gulp-iconfont-css": "0.0.9",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-ignore": "^1.2.1",
+    "gulp-sourcemaps": "1.5.2",
+    "gulp-soynode": "1.5.0",
+    "gulp-wrapper": "^1.0.0",
     "isparta": "^3.0.3",
-    "karma": "^0.12.31",
-    "karma-babel-preprocessor": "^5.1.0",
+    "karma": "0.12.31",
     "karma-browserify": "^4.1.2",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.8",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-coverage": "eduardolundgren/karma-coverage#next",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-ievms": "0.0.4",
-    "karma-mocha": "^0.1.10",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.11",
+    "karma-mocha": "0.1.10",
     "karma-sinon": "^1.0.4",
-    "liferay-sdk": "git://github.com/liferay-apps/tasks.git",
-    "mocha": "^2.2.4",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.0"
+    "metaljs": "liferay/metal.js#master",
+    "mocha": "^2.2.5",
+    "run-sequence": "^1.1.0",
+    "sinon": "^1.14.1"
   }
 }
