--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   },
   "devDependencies": {
     "babel": "^5.4.2",
-    "browserify": "^10.2.0",
-    "browserify-imports-renamer": "^0.1.2",
-    "browserify-istanbul": "^0.2.1",
     "chai": "^2.3.0",
     "closure-templates": "20141017.0.1",
     "del": "1.1.1",
@@ -22,12 +19,14 @@
     "gulp-wrapper": "^1.0.0",
     "isparta": "^3.0.3",
     "karma": "0.12.31",
-    "karma-browserify": "^4.1.2",
+    "karma-babel-preprocessor": "^5.1.0",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "^0.1.12",
-    "karma-coverage": "eduardolundgren/karma-coverage#next",
+    "karma-commonjs": "0.0.13",
+    "karma-coverage": "0.3.1",
     "karma-mocha": "0.1.10",
     "karma-sinon": "^1.0.4",
+    "karma-source-map-support": "^1.0.0",
     "metaljs": "liferay/metal.js#master",
     "mocha": "^2.2.5",
     "run-sequence": "^1.1.0",
